membuat form login dan mencoba listview untuk pelanggan

--- a/app/src/main/res/layout/activity_pelangganview.xml
+++ b/app/src/main/res/layout/activity_pelangganview.xml
@@ -4,11 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".tampilan.pelangganview">
 
     <ListView
-        android:id="@+id/listView"
-        android:layout_width="405dp"
-        android:layout_height="251dp"
-        android:layout_marginBottom="48dp"></ListView>
+        android:id="@+id/pelanggan_list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 </FrameLayout>
