--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -6,81 +6,68 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@android:color/holo_blue_bright">
-
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="417dp"
-        android:layout_height="216dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.031"
-        app:srcCompat="@drawable/laundry_logos_joy_studio_design_gallery_best_design_laundry_logo_logo_templates_creative_market_l_13348_02" />
+    android:background="#888588">
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="9dp"
+        android:layout_marginBottom="396dp"
         android:fontFamily="monospace"
         android:text="Welcome To Argan Laundry"
-        android:textColor="@android:color/background_dark"
+        android:textColor="#FFFFFF"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2"
-        app:layout_constraintVertical_bias="0.008" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/cm"
-        android:layout_width="153dp"
-        android:layout_height="47dp"
-        android:layout_marginBottom="20dp"
+        android:layout_width="152dp"
+        android:layout_height="44dp"
+        android:layout_marginBottom="8dp"
         android:background="@android:color/white"
         android:text="Data Cuci Masuk"
         app:layout_constraintBottom_toTopOf="@+id/transaksi"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.484"
+        app:layout_constraintHorizontal_bias="0.434"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/transaksi"
-        android:layout_width="158dp"
-        android:layout_height="49dp"
-        android:layout_marginBottom="20dp"
+        android:layout_width="152dp"
+        android:layout_height="44dp"
+        android:layout_marginBottom="8dp"
         android:background="@android:color/white"
         android:text="Data Transaksi"
         app:layout_constraintBottom_toTopOf="@+id/laporan"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintHorizontal_bias="0.442"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/laporan"
-        android:layout_width="158dp"
-        android:layout_height="49dp"
-        android:layout_marginBottom="24dp"
+        android:layout_width="152dp"
+        android:layout_height="44dp"
+        android:layout_marginBottom="12dp"
         android:background="@android:color/white"
         android:text="Laporan"
         app:layout_constraintBottom_toTopOf="@+id/exit"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.442"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/exit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="56dp"
+        android:layout_marginBottom="52dp"
         android:background="#D81B60"
-        android:text="Exit"
         android:onClick="keluar"
+        android:text="Exit"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.458"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
@@ -93,9 +80,20 @@
         android:text="Data Pelanggan"
         app:layout_constraintBottom_toTopOf="@+id/cm"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.482"
+        app:layout_constraintHorizontal_bias="0.436"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:layout_constraintVertical_bias="0.367" />
+        app:layout_constraintVertical_bias="0.709" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="175dp"
+        android:layout_height="153dp"
+        app:layout_constraintBottom_toTopOf="@+id/textView2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.871"
+        app:srcCompat="@drawable/icons8_washing_machine_64" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
