--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -66,6 +66,7 @@
         android:layout_marginBottom="24dp"
         android:background="@android:color/white"
         android:text="Laporan"
+        android:onClick="lap"
         app:layout_constraintBottom_toTopOf="@+id/exit"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
