--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -5,8 +5,8 @@
     android:id="@+id/linearLayout2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="#888588">
+    android:background="#888588"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/textView2"
@@ -25,51 +25,39 @@
         android:id="@+id/cm"
         android:layout_width="152dp"
         android:layout_height="44dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="136dp"
         android:background="@android:color/white"
-        android:text="Data Cuci Masuk"
         android:onClick="datCuci"
-        app:layout_constraintBottom_toTopOf="@+id/transaksi"
+        android:text="Data Cuci Masuk"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.434"
+        app:layout_constraintHorizontal_bias="0.436"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/transaksi"
         android:layout_width="152dp"
         android:layout_height="44dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="16dp"
         android:background="@android:color/white"
         android:text="Data Transaksi"
-        app:layout_constraintBottom_toTopOf="@+id/laporan"
+        android:onClick="detailClick"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.442"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <Button
-        android:id="@+id/laporan"
-        android:layout_width="152dp"
-        android:layout_height="44dp"
-        android:layout_marginBottom="12dp"
-        android:background="@android:color/white"
-        android:text="Laporan"
-        android:onClick="lap"
-        app:layout_constraintBottom_toTopOf="@+id/exit"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.442"
+        app:layout_constraintHorizontal_bias="0.455"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/exit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="24dp"
+        android:layout_marginBottom="16dp"
         android:background="#D81B60"
         android:onClick="keluar"
         android:text="Exit"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.458"
+        app:layout_constraintHorizontal_bias="0.95"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
@@ -85,7 +73,7 @@
         app:layout_constraintHorizontal_bias="0.436"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.427" />
 
     <ImageView
         android:id="@+id/imageView2"
@@ -106,8 +94,33 @@
         android:text="Data Barang"
         app:layout_constraintBottom_toTopOf="@+id/cm"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.458"
+        app:layout_constraintHorizontal_bias="0.45"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/b_pelanggan" />
+        app:layout_constraintTop_toBottomOf="@+id/b_pelanggan"
+        app:layout_constraintVertical_bias="0.697" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:onClick="HeaderClick"
+        android:text="Data Header"
+        app:layout_constraintBottom_toTopOf="@+id/transaksi"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.445"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="28dp"
+        android:text="Data User"
+        android:onClick="UserClick"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.436"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
