--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -5,122 +5,142 @@
     android:id="@+id/linearLayout2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#888588"
+    android:background="#FFFFFF"
     android:orientation="vertical">
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="396dp"
         android:fontFamily="monospace"
-        android:text="Welcome To Argan Laundry"
-        android:textColor="#FFFFFF"
+        android:text="Daftar Menu"
+        android:textColor="#000000"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.063"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.31" />
 
     <Button
         android:id="@+id/cm"
-        android:layout_width="152dp"
-        android:layout_height="44dp"
+        android:layout_width="172dp"
+        android:layout_height="50dp"
         android:layout_marginBottom="136dp"
         android:background="@android:color/white"
+        android:drawableRight="@drawable/cuci_musik"
         android:onClick="datCuci"
         android:text="Data Cuci Masuk"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.436"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.866"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/b_pelanggan"
+        app:layout_constraintVertical_bias="0.359" />
 
     <Button
         android:id="@+id/transaksi"
-        android:layout_width="152dp"
+        android:layout_width="172dp"
         android:layout_height="44dp"
         android:layout_marginBottom="16dp"
         android:background="@android:color/white"
-        android:text="Data Transaksi"
+        android:drawableRight="@drawable/fintech"
         android:onClick="detailClick"
+        android:text="Data Transaksi"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.455"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.866"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cm"
+        app:layout_constraintVertical_bias="0.4" />
 
     <Button
         android:id="@+id/exit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:background="#D81B60"
+        android:layout_marginBottom="28dp"
+
+        android:background="#FFFFFF"
         android:onClick="keluar"
+        android:drawableLeft="@drawable/logout"
         android:text="Exit"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.95"
+        app:layout_constraintHorizontal_bias="0.47"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/b_pelanggan"
-        android:layout_width="152dp"
+        android:layout_width="179dp"
         android:layout_height="44dp"
-        android:layout_marginTop="48dp"
+
         android:background="@android:color/white"
+        android:drawableRight="@drawable/customers"
         android:onClick="clickdapel"
         android:text="Data Pelanggan"
-        app:layout_constraintBottom_toTopOf="@+id/cm"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.436"
+        app:layout_constraintHorizontal_bias="0.892"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:layout_constraintVertical_bias="0.427" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.454" />
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="175dp"
-        android:layout_height="153dp"
-        app:layout_constraintBottom_toTopOf="@+id/textView2"
+        android:layout_width="211dp"
+        android:layout_height="178dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.871"
-        app:srcCompat="@drawable/icons8_washing_machine_64" />
+        app:layout_constraintVertical_bias="0.033"
+        app:srcCompat="@drawable/logo" />
 
     <Button
         android:id="@+id/button"
-        android:layout_width="wrap_content"
+        android:layout_width="145dp"
         android:layout_height="wrap_content"
+        android:background="#FFFFFF"
+        android:drawableLeft="@drawable/bed"
         android:onClick="barangHandler"
         android:text="Data Barang"
-        app:layout_constraintBottom_toTopOf="@+id/cm"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.45"
+        app:layout_constraintHorizontal_bias="0.06"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/b_pelanggan"
-        app:layout_constraintVertical_bias="0.697" />
+        app:layout_constraintTop_toBottomOf="@+id/button3"
+        app:layout_constraintVertical_bias="0.15" />
 
     <Button
         android:id="@+id/button2"
-        android:layout_width="wrap_content"
+        android:layout_width="165dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
+        android:background="#FFFFFF"
+        android:drawableLeft="@drawable/calendar"
         android:onClick="HeaderClick"
-        android:text="Data Header"
-        app:layout_constraintBottom_toTopOf="@+id/transaksi"
+        android:text="Waktu Pesanan"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.445"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.065"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button"
+        app:layout_constraintVertical_bias="0.288" />
 
     <Button
         android:id="@+id/button3"
-        android:layout_width="wrap_content"
+        android:layout_width="145dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
-        android:text="Data User"
+        android:layout_marginTop="264dp"
+        android:background="#FFFFFF"
+        android:drawableLeft="@drawable/user"
         android:onClick="UserClick"
+        android:text="Data User"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.436"
+        app:layout_constraintHorizontal_bias="0.06"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
