--- a/app/src/main/res/layout/activity_pelanggan.xml
+++ b/app/src/main/res/layout/activity_pelanggan.xml
@@ -9,12 +9,23 @@
     android:orientation="vertical"
     tools:context=".activities.PelangganActivity">
 
+
     <Button
         android:id="@+id/buttonTambahPelanggan"
         android:layout_width="186dp"
         android:layout_height="wrap_content"
         android:layout_gravity="left"
+        android:background="#FFFFFF"
+        android:drawableLeft="@drawable/input"
         android:text="Tambah Pelanggan" />
+
+    <TextView
+        android:layout_width="256dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="left"
+        android:text="Tabel Pelanggan"
+        android:textSize="25dp"
+        />
 
     <HorizontalScrollView
         android:id="@+id/horizontalScrollView"
